2004-09-24  Martin Baulig  <martin@ximian.com>

	* generic.cs (GenericConstraints): Added `IsReferenceType' and
	`IsValueType' properties.

	* support.cs (ReflectionConstraints): Use
	Type.GetGenericParameterConstraints() instead of the old hack.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* generic.cs (GenericConstraints): Moved here and made it an
	abstract class.

	* support.cs (GenericConstraints): Moved to generic.cs.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* support.cs
	(ReflectionConstraints): Un-nested this class and made it public.

	* typemanager.cs
	(TypeManager.GetTypeParameterConstraints): New public method.
	(TypeManager.HasConstructorConstraint): Use the attributes.

2004-09-24  Martin Baulig  <martin@ximian.com>

	* support.cs (GenericConstraints): Replaced `HasConstructor',
	`IsReferenceType' and `IsValueType' with `Attributes'.
	(ReflectionParameters.ReflectionConstraints): Removed the Create()
	method and made the .ctor public.

	* generic.cs (Constraints.Attributes): New public property.
	(Constraints): Renamed `HasConstructor' -> `HasConstructorConstraint',
	`IsReferenceType' -> `HasReferenceTypeConstraint' and
	`IsValueType' -> `HasValueTypeConstraint'.

2004-09-23  Martin Baulig  <martin@ximian.com>

	* generic.cs (Constraints): Reflect latest runtime changes.

2004-09-23  Martin Baulig  <martin@ximian.com>

	* convert.cs (Convert.ImplicitReferenceConversion): Some code cleanup.
	(Convert.ImplicitReferenceConversionExists): Likewise.

2004-09-23  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (Operator.Define): Add error 448 and 559 report.
        
2004-09-22  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (MemberBase.IsTypePermitted): New protected
	method for checking error CS0610.

2004-09-22  Marek Safar  <marek.safar@seznam.cz>

	* class.cs (TypeContainer.HasExplicitLayout): New property
	Returns whether container has StructLayout attribute set Explicit.
	(FieldMember): New abstract class for consts and fields.